<resources>
    <string name="app_name">KitchenInPocket</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="failed_login">Sorry, failed to login.</string>
    <string name="invalid_user">Invalid Username or Password.</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="remember_me">Remember me</string>
    <string name="auto_login">Automatic Login</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="cancel_auto_login">Don not need to automatically login</string>
    <string name="tourist"> Hello, tourist!</string>
    <string name="re_password">Please re-enter your password:</string>
    <string name="cancel">cancel</string>
    <string name="failed_to_login">Failed to login.</string>
    <string name="change_password">Change Password</string>
    <string name="my_followers">My followers</string>
    <string name="my_following">My followings</string>
    <string name="old_password">Old Password: </string>
    <string name="new_password">New Password: </string>
    <string name="re_new_password">Reenter New Password: </string>
    <string name="submit">Submit</string>
    <string name="failed_change_password">Failed to change the password.</string>
    <string name="title_activity_menu">Menus(%1$s)</string>
    <string name="login_first">Please Login first!</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="large_text">
        "\tKitchen in Pocket allows you to share your recipes with others anytime, anywhere. This application was developed by the group "GreatSky".\n"

        "\tThe group members are Haotian Sun, HongJi Chen, Sihang Lu, Wenli Fang.(alphabetical order)\n"

        "\tWe value your feedback! Please email your questions and suggestions to greatsky@gmail.com.\n\n"

        "* Important note: \n  Kitchen in Pocket is a free service. Extra data charges may apply when using any website on your mobile device depending on your service plan.\n"

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_instrction">InstrctionActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="instruction_text">
        <item>Before you enjoy our "Kitchen in Pocket", please register first.</item>
        <item>After registration, you can log in to our app.</item>
        <item>At main page you can see weekly recommeded recipes and what you and your followings recently done.</item>
        <item>Click the plus symble then you can create your own recipe!</item>
        <item>At my profile page, you can find your followings and followers information.</item>
        <item>At my menu page, you can find all the recipes you created.</item>
        <item>At my favorite dish page, you can find all the recipes you favored.</item>
        <item>Click in one recipe, you can see all the details about that recipe.</item>
    </string-array>
</resources>
