<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.greatsky.kitcheninpocket.ChangePasswordActivity">

    <TextView
        android:text="@string/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/txtstyle"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:background="@color/light_logo"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/change_old_pass" />

    <TextView
        android:text="@string/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_old_pass"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="28dp"
        style="@style/txtstyle"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/change_new_pass"
        android:background="@color/light_logo"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/change_old_pass" />

    <TextView
        android:text="@string/re_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_new_pass"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="26dp"
        style="@style/txtstyle"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:id="@+id/change_renew_pass"
        android:layout_below="@+id/textView5"
        android:background="@color/light_logo"
        android:layout_alignStart="@+id/change_old_pass" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_renew_pass"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="49dp"
        android:background="@color/light_action_bar"
        android:id="@+id/change_cancel" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/change_cancel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:background="@color/light_action_bar"
        android:id="@+id/change_submit" />
</RelativeLayout>
