<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f7f7f0"
    tools:context="com.greatsky.kitcheninpocket.RegisterActivity">


    <ImageView
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/register_logo1"
        android:id="@+id/imageView3"
        android:layout_above="@+id/register_username_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/register_username"
        android:background="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/register_pass_text"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_username_text"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/register_username"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_pass"
        android:background="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_pass_text"
        android:layout_above="@+id/register_pass"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/register_cancel"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/register_register"
        android:layout_marginTop="10dp"
        android:background="#74a4d1"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/register_register"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/register_repass"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:background="@color/light_action_bar"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_repass"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:layout_below="@+id/register_repass_text"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/re_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_repass_text"
        android:layout_below="@+id/register_pass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

</RelativeLayout>
