<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@color/colorPrimary"
android:orientation="vertical" >
<LinearLayout
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px"
            android:layout_marginTop="50px"
            android:background="@android:color/transparent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                style="@style/txtstyle"/>
            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:inputType="text"
                android:ems="20"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:text="@string/password"
                style="@style/txtstyle"/>
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:inputType="textPassword"
                android:background="@android:color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_marginBottom="10px"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkpass"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remember_me"
                    />
                <CheckBox
                    android:id="@+id/auto_login"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_login"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


            <Button
                android:id="@+id/login"
                android:layout_width="200px"
                android:layout_height="70px"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10px"
                android:layout_marginRight="20px"
                android:background="@android:color/holo_orange_light"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:fontFamily="sans-serif"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/zhuce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColorLink="#436EEE"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="normal|italic"
                android:textAllCaps="false"
                android:lineSpacingExtra="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignBaseline="@+id/login"
                android:layout_alignBottom="@+id/login"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:textSize="18sp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orange"
            android:layout_below="@+id/login"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>
<TextView
    android:id="@+id/auto"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/auto_login"
    />
</LinearLayout>


